[package]
name = "based"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
anyhow = "1.0"
dotenv = "0.15.0"

tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "json",
] }
