[package]
name = "based"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
anyhow = "1.0"
dotenv = "0.15.0"

tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "json",
] }

http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = ["client", "http1", "client-legacy"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }